<resources>
    <string name="app_name" translatable="false">What to watch?</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">whattowatch.bitfrom.me</string>
    <string name="content_authority" translatable="false">me.bitfrom.whattowatch</string>

    <!-- Strings for navigation drawer -->
    <string name="drawer_item_top">Top films</string>
    <string name="drawer_item_favorites">Favorite</string>
    <string name="drawer_item_bottom">Bottom films</string>
    <string name="drawer_item_in_cinemas">In cinemas</string>
    <string name="drawer_item_coming_soon">Coming soon</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="start_syncing_message">Start syncing comingSoonDataModel</string>
    <string name="syncing_dismiss">Dismiss</string>

    <!-- Strings for TopFilmsFragment -->
    <string name="random_films_fragment_title">Top films</string>

    <!-- Strings for recyclerview -->
    <string name="films_poster_content_description">Film\'s poster</string>
    <string name="imdb_label">IMDB:</string>

    <!-- Strings for DetailFragment -->
    <string name="release_year">Released:</string>
    <string name="runtime">Runtime:</string>
    <string name="country">Countries:</string>
    <string name="rating">Rating:</string>
    <string name="genre">Genres:</string>
    <string name="awards">Awards:</string>
    <string name="director">Directors:</string>
    <string name="writer">Writers:</string>
    <string name="actors">Actors:</string>
    <string name="plot_lbl">Plot</string>
    <string name="successfully_added_to_fav">Added to Favorite</string>
    <string name="deleted_from_fav">Deleted from Favorite</string>
    <string name="undo_fav">Undo</string>
    <string name="dialog_title">Attention!</string>
    <string name="dialog_message">You are requesting to open IMDB website</string>
    <string name="dialog_negative">Don\'t open</string>
    <string name="dialog_positive">Open</string>

    <!-- Strings for FavoritesFragment -->
    <string name="favorite_fragment_title">Favorite</string>
    <string name="empty_favorite_list">There are no films in the Favorite</string>
    <string name="search_title">Search</string>
    <string name="error_nothing_has_found">Nothing has found</string>

    <!-- Strings for SettingsFragment-->
    <string name="settings_fragment_title">Settings</string>
    <string name="pref_general_section">General</string>
    <string name="pref_notification_section">Notifications</string>
    <string name="pref_settings_screen">Settings</string>

    <!--Preferences information-->

    <!--Settings for movies number-->
    <!-- Label for the number of films preference -->
    <string name="pref_number_of_films_label">Number of films</string>
    <!--Label for 5 films preference-->
    <string name="pref_number_of_films_label_five">5</string>
    <!--Label for 7 films preference-->
    <string name="pref_number_of_films_label_seven">7</string>
    <!--Label for 10 films preference-->
    <string name="pref_number_of_films_label_ten">10</string>

    <!--Value in SharedPreferences for 5 films option-->
    <string name="pref_number_of_films_five">5</string>
    <!--Value in SharedPreferences for 7 films option-->
    <string name="pref_number_of_films_seven">7</string>
    <!--Value in SharedPreferences for 10 films option-->
    <string name="pref_number_of_films_ten">10</string>
    <!-- Key name for number of films preference in SharedPreferences -->
    <string name="pref_number_of_films_key" translatable="false">films</string>
    <!--Default value preference in SharedPreferences-->
    <string name="pref_number_of_films_seven_default">7</string>


    <!--Settings for frequency of updates-->
    <!-- Label for the frequency of updates preference -->
    <string name="pref_frequency_of_updates_label">Update</string>
    <!--Label for every 3 days updates preference-->
    <string name="pref_frequency_of_updates_label_three">Every 3 days</string>
    <!--Label for every 5 days updates preference-->
    <string name="pref_frequency_of_updates_label_five">Every 5 days</string>
    <!--Label for every 7 days updates preference-->
    <string name="pref_frequency_of_updates_label_seven">Every 7 days</string>

    <!--Value in SharedPreferences for every 3 days updates option-->
    <string name="pref_frequency_of_updates_three">3</string>
    <!--Value in SharedPreferences for every 5 days updates option-->
    <string name="pref_frequency_of_updates_five">5</string>
    <!--Value in SharedPreferences for every 7 days updates option-->
    <string name="pref_frequency_of_updates_seven">7</string>
    <!-- Key name for frequency of updates preference in SharedPreferences -->
    <string name="pref_frequency_of_updates_key" translatable="false">updates</string>
    <!--Default value preference in SharedPreferences-->
    <string name="pref_frequency_of_updates_five_default">Every 5 days</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_vibration_key" translatable="false">enable_vibration</string>
    <string name="pref_enable_led_key" translatable="false">enable_led</string>
    <string name="pref_enable_sound_key" translatable="false">enable_sound</string>

    <string name="pref_enable_notifications_label">Updates Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_enable_vibration_label">Vibration</string>
    <string name="pref_enable_led_label">Led Indicator</string>
    <string name="pref_enable_sound_label">Sound</string>

    <!-- String for notification bar-->
    <string name="notification_message">There are some WONDERFUL films for YOU!</string>

    <!-- Strings for ShareBottomSheet -->
    <string name="share_action_title">Describe your fillings</string>
    <string name="share_action_next">Next</string>
    <string name="share_action_cancel">Cancel</string>
    <string name="share_action_error_long_comment">Your comment is too long</string>
    <string name="share_action_edit_text_hint">Short comment (max 50 symbols)</string>
    <string name="share_action_awesome_intro">There is an awesome film</string>
    <string name="share_action_imdb_rating">which IMDB rating is</string>
    <string name="share_action_directors">And directed by</string>
    <string name="share_to">Share via:</string>
    <string name="app_hash_tag"> #WhatToWatchApp</string>

    <!-- Strings for error handling -->
    <string name="empty_films_list">Oops! This list is empty. Loading a new one…</string>
    <string name="error_connection_unavailable">Please, check your internet connection.</string>
    <string name="unknown_error_msg">Oops! Something wrong with the server :( Try again later.</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="not_valid_info">N/A</string>

    <!-- Fake comingSoonDataModel -->
    <string name="fake_user_name">Username</string>
    <string name="fake_user_email">username@mail.com</string>

    <!-- Strings for about_dialog -->
    <string name="about_category">About</string>
    <string name="about_dialog_title">About authors</string>
    <string name="designed_by_lbl">Designed by:</string>
    <string name="designer_credentials">Margarita Strokalis</string>
    <string name="developed_by_lbl">Developed by:</string>
    <string name="developer_credentials">Constantine Chernenko</string>
    <string name="animations_by_lbl">Animations by:</string>
    <string name="animations_credentials">Denis Ermak</string>
    <string name="about_dialog_freespace_fix">\u0020</string>

    <!-- Strings for slider 1 -->
    <string name="slider_1_top_text">Welcome!</string>
    <string name="slider_1_middle_text">This app is going to suggest you some interesting films</string>
    <string name="slider_1_bottom_text">You can select number of films and period of updates in the Settings</string>
    <!-- Strings for slider 2 -->
    <string name="slider_2_top_text">Something cool</string>
    <string name="slider_2_middle_text">1. Top films</string>
    <string name="slider_2_bottom_text">Films from the TOP250 list</string>
    <!-- Strings for slider 3 -->
    <string name="slider_3_top_text">Or not</string>
    <string name="slider_3_middle_text">2. Bottom films</string>
    <string name="slider_3_bottom_text">Films from the worst TOP100 list</string>
    <!-- Strings for slider 4 -->
    <string name="slider_4_top_text">Or new</string>
    <string name="slider_4_middle_text">3. In cinemas</string>
    <string name="slider_4_bottom_text">Films that are in cinemas now</string>
    <!-- Strings for slider 5 -->
    <string name="slider_5_top_text">Or not existed</string>
    <string name="slider_5_middle_text">4. Coming soon</string>
    <string name="slider_5_bottom_text">Films that are in cinemas now</string>
    <!-- Strings for slider 6 -->
    <string name="slider_6_top_text">What else?</string>
    <string name="slider_6_middle_text">Save the liked ones to favorite or share with friends*</string>
    <string name="slider_6_bottom_text">*If you have them</string>

</resources>
