<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:title="@string/pref_general_section">
        <ListPreference
            android:key="@string/pref_number_of_films_key"
            android:title="@string/pref_number_of_films_label"
            android:entries="@array/pref_number_of_films_options"
            android:entryValues="@array/pref_number_of_films_values"
            android:defaultValue="@string/pref_number_of_films_seven_default"/>

        <ListPreference
            android:key="@string/pref_frequency_of_updates_key"
            android:title="@string/pref_frequency_of_updates_label"
            android:entries="@array/pref_frequency_of_updates_options"
            android:entryValues="@array/pref_frequency_of_updates_values"
            android:defaultValue="@string/pref_frequency_of_updates_five"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notification_section">
        <SwitchPreference
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_vibration_label"
            android:key="@string/pref_enable_vibration_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_led_label"
            android:key="@string/pref_enable_led_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_sound_label"
            android:key="@string/pref_enable_sound_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_category">
        <me.bitfrom.whattowatch.ui.AboutDialog
            android:title="@string/about_dialog_title"/>
    </PreferenceCategory>
</PreferenceScreen>