<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/about_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/design_section">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/designed_by_title"
            android:textSize="16sp"
            android:text="@string/designed_by_lbl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/designed_by"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/designer_credentials"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/developer_section">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developed_by_title"
            android:textSize="16sp"
            android:text="@string/developed_by_lbl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developed_by"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/developer_credentials"/>
    </LinearLayout>


</LinearLayout>