<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/slider_3_background"
    android:id="@+id/intro_slide_3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/slider_zero_height"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:paddingStart="@dimen/slider_padding_32"
        android:paddingLeft="@dimen/slider_padding_32"
        android:paddingRight="@dimen/slider_padding_32"
        android:paddingEnd="@dimen/slider_padding_32"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        android:textSize="@dimen/slider_big_text_size"
        android:textColor="@color/slider_text_color_white"
        android:text="@string/slider_3_top_text"
        android:id="@+id/slide_3_top_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/slider_zero_height"
        android:orientation="vertical"
        android:layout_weight="5"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/slider_middle_text_margin"
            android:paddingStart="@dimen/slider_padding_16"
            android:paddingLeft="@dimen/slider_padding_16"
            android:paddingRight="@dimen/slider_padding_32"
            android:paddingEnd="@dimen/slider_padding_32"
            android:textSize="@dimen/slider_medium_text_size"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/slider_text_color_white"
            android:text="@string/slider_3_middle_text"
            android:id="@+id/slide_3_middle_text"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/slider_zero_height"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/slider_padding_64"
        android:paddingRight="@dimen/slider_padding_64"
        android:textColor="@color/slider_text_color_white"
        android:textSize="@dimen/slider_small_text_size"
        android:text="@string/slider_3_bottom_text"
        android:id="@+id/slide_3_bottom_text"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/slider_bottom_height"  />
</LinearLayout>